  * Drop kdelibs5 transitional package.
  * Remove sequence numbers from debian/patches.
  * Drop kaboom support, no longer needed.
  * Remove ~/.kde4 -> ~/.kde transition templates, no longer needed.
  * Set ENABLE_LIBKDEINIT_RUNPATH to ON if build type is Debian
    (patch make_libkdeinit4_private.diff altered).
  * Require pkg-kde-tools 0.12 due to ENABLE_LIBKDEINIT_RUNPATH change above.

  [ George Kiagiadakis ]
  * Change my email address in uploaders.
  * Adjust build dependencies:
    - Bump required cmake version to 2.6.4.
    - Add build dependencies on:
      - libdbusmenu-qt-dev
      - docbook-xml
      - docbook-xsl
      - libxrender-dev
      - libkrb5-dev
    - Remove unused build dependencies:
      - libcups2-dev
      - libdbus-1-dev
      - libasound2-dev
      - libkeyutils-dev
      - xsltproc
      - libxcursor-dev
      - libxtst-dev
  * Add packages for the new libararies: libkatepartinterfaces4,
    libkcmutils4, libkidletime4, libkemoticons4, libkprintutils4.
  * Add symbol files for the new libraries.
  * Remove libkutils4.symbols as kutils is now a dummy
    transitional library with no symbols.
  * Add docbook-xml dependency on the kdoctools package,
    as it is required for building all of kde's documentation.
  * Bump kdebase-runtime Breaks/Recommends to version 4.6.

  [ Didier Raboud ]
  * Adjust build-dependencies:
    - Bump required:
      - Qt to 4:4.7.0.
      - libattica to 0.1.90.
      - soprano to 2.5.60.
      - polkit-qt-1 to 0.99.0.
      - shared-desktop-ontologies to 0.5.
    - Add build dependencies on:
      - libudev-dev
      - libqtwebkit-dev
  * Add libnepomukutils4 package.

  [ Pino Toscano ]
  * Make libknewstuff2-4 and libknewstuff3-4 recommend gnupg, as they can use
    `gpg' for checking validity and signatures of downloaded content.
  * Add docbook-xsl dependency on the kdoctools package, for same reason as
    docbook-xml.
  * Improve Depends and Recommends of libsolid: