@@ -22,6 +22,8 @@ kde4libs (4:4.6.1-0r2) UNRELEASED; urgency=low
   * Set ENABLE_LIBKDEINIT_RUNPATH to ON if build type is Debian
     (patch make_libkdeinit4_private.diff altered).
   * Require pkg-kde-tools 0.12 due to ENABLE_LIBKDEINIT_RUNPATH change above.
+  * Pass required kdelibs cmake flags to dh_auto_configure.
+    qt-kde-team/2/debian-qt-kde.mk no longer passes them implicitly.
 
   [ George Kiagiadakis ]
   * Change my email address in uploaders.
